@@ -106,6 +106,9 @@ void Primitive::SetDefaults(bool fromMouseClick)
    hr = GetRegInt("DefaultProps\\Primitive", "DrawTexturesInside", &iTmp);
    m_d.m_DrawTexturesInside = (hr == S_OK) && fromMouseClick ? (iTmp==1) : true;
 
+   hr = GetRegInt("DefaultProps\\Primitive", "UpdateRegions", &iTmp);
+   m_d.m_triggerUpdateRegion = (hr == S_OK) && fromMouseClick ? (iTmp==1) : true;
+
    // Position (X and Y is already set by the click of the user)
    hr = GetRegStringAsFloat("DefaultProps\\Primitive","Position_Z", &fTmp);
    m_d.m_vPosition.z = (hr == S_OK) && fromMouseClick ? fTmp : 0;
@@ -222,6 +225,9 @@ void Primitive::WriteRegDefaults()
 
    iTmp = (m_d.m_DrawTexturesInside) ? 1 : 0;
    SetRegValue("DefaultProps\\Primitive","DrawTexturesInside",REG_DWORD,&iTmp,4);
+
+   iTmp = (m_d.m_triggerUpdateRegion) ? 1 : 0;
+   SetRegValue("DefaultProps\\Primitive","UpdateRegions",REG_DWORD,&iTmp,4);
 
    sprintf_s(strTmp, 40, "%f", m_d.m_vPosition.z);
    SetRegValue("DefaultProps\\Primitive","Position_Z", REG_SZ, &strTmp,strlen(strTmp));	
@@ -1037,6 +1043,7 @@ HRESULT Primitive::SaveData(IStream *pstm, HCRYPTHASH hcrypthash, HCRYPTKEY hcry
    bw.WriteInt(FID(SCOL), m_d.m_SideColor);
    bw.WriteInt(FID(TVIS), (m_d.m_TopVisible) ? 1 : 0);
    bw.WriteInt(FID(DTXI), (m_d.m_DrawTexturesInside) ? 1 : 0);
+   bw.WriteInt(FID(TRUR), (m_d.m_triggerUpdateRegion) ? 1 : 0);
    bw.WriteInt(FID(ENLI), (m_d.useLighting) ? 1 : 0);
    bw.WriteInt(FID(U3DM), (m_d.use3DMesh) ? 1 : 0 );
    bw.WriteInt(FID(STRE), (m_d.staticRendering) ? 1 : 0 );
@@ -1162,6 +1169,12 @@ BOOL Primitive::LoadToken(int id, BiffReader *pbr)
       int iTmp;
       pbr->GetInt(&iTmp);
       m_d.m_DrawTexturesInside = (iTmp==1);
+   }
+   else if (id == FID(TRUR))
+   {
+      int iTmp;
+      pbr->GetInt(&iTmp);
+      m_d.m_triggerUpdateRegion = (iTmp==1);
    }
    else if (id == FID(ENLI))
    {
@@ -2255,6 +2268,24 @@ STDMETHODIMP Primitive::put_EnableSphereMapping(VARIANT_BOOL newVal)
 
    m_d.sphereMapping = VBTOF(newVal);
 
+   STOPUNDO
+
+   return S_OK;
+}
+
+STDMETHODIMP Primitive::get_UpdateRegions(VARIANT_BOOL *pVal)
+{
+   *pVal = (VARIANT_BOOL)FTOVB(m_d.m_triggerUpdateRegion);
+
+   return S_OK;
+}
+
+STDMETHODIMP Primitive::put_UpdateRegions(VARIANT_BOOL newVal)
+{
+   STARTUNDO
+
+   m_d.m_triggerUpdateRegion = VBTOF(newVal);
+   
    STOPUNDO
 
    return S_OK;
